--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 						</div>
 						<div class="col-lg-4 col-md-6 col-12 item">
 							<!-- Begin icon item -->
-							<a href="single-services.html" class="iitem item-style">
+							<a href="#" class="iitem item-style">
 								<div class="iitem-icon">
 									<img src = "assets/img/plano.png" alt = "extintor" height="70px" width="70px"></img>
 								</div>
@@ -201,7 +201,7 @@
 						</div>
 						<div class="col-lg-4 col-md-12 col-12 item">
 							<!-- Begin icon item -->
-							<a href="single-services.html" class="iitem item-style">
+							<a href="#" class="iitem item-style">
 								<div class="iitem-icon">
 									<img src = "assets/img/alarmes.png" alt = "extintor" height="80px" width="80px"></img>
 								</div>
@@ -230,7 +230,7 @@
 						</div>
 						<div class="col-lg-4 col-md-6 col-12 item">
 							<!-- Begin icon item -->
-							<a href="single-services.html" class="iitem item-style">
+							<a href="#" class="iitem item-style">
 								<div class="iitem-icon">
 									<img src = "assets/img/treinamentos.png" alt = "extintor" height="70px" width="70px"></img>
 								</div>
@@ -244,7 +244,7 @@
 						</div>
 						<div class="col-lg-4 col-md-12 col-12 item">
 							<!-- Begin icon item -->
-							<a href="single-services.html" class="iitem item-style">
+							<a href="#" class="iitem item-style">
 								<div class="iitem-icon">
 									<img src = "assets/img/lampada.png" alt = "extintor" height="70px" width="70px"></img>
 								</div>
