--- a/hidrantes.html
+++ b/hidrantes.html
@@ -33,15 +33,13 @@
 			<!-- Begin mobile main menu -->
 <nav class="mmm">
     <div class="mmm-content">
-        <ul class="mmm-list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-us.html">About us</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="typography.html">Typography</a></li>
-            <li><a href="tabs-and-accordions.html">Tabs & Accordions</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
-        </ul>
+        <div class="mmm-content">
+            <ul class="mmm-list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="https://www.panitz.com.br/">Nossa Loja</a></li>
+            </ul>
+        </div>
     </div>
     <div class="mmm-footer">
         <ul class="mmm-lang">
@@ -93,6 +91,11 @@
                 </div>
                 <div class="col-auto header-fixed-col d-none d-lg-block col-static">
                     <!-- Begin main menu -->
+                <ul class="main-mnu-list">
+                    <li><a href="index.html" data-title="Home"><span>Home</span></a></li>
+                    <li><a href="#" data-title="Services"><span>Contato</span></a></li>
+                    <li><a href="https://www.panitz.com.br/" data-title="Contact Us"><span>Nossa Loja</span></a></li>
+                </ul>
 
 </header><!-- End header -->
 			<div class="section">
