--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <nav class="main-mnu">
     <ul class="main-mnu-list">
         <li><a href="index.html" data-title="Home"><span>Home</span></a></li>
-        <li><a href="contato.html" data-title="Services"><span>Contato</span></a></li>
+        <li><a href="#" data-title="Services"><span>Contato</span></a></li>
         <li><a href="https://www.panitz.com.br/" data-title="Contact Us"><span>Nossa Loja</span></a></li>
     </ul>
 </nav><!-- End main menu -->
