--- a/extintores.html
+++ b/extintores.html
@@ -35,12 +35,8 @@
     <div class="mmm-content">
         <ul class="mmm-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about-us.html">About us</a></li>
-            <li><a href="services.html">Serviços</a></li>
-            <li><a href="typography.html">Typography</a></li>
-            <li><a href="tabs-and-accordions.html">Tabs & Accordions</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="https://www.panitz.com.br/">Nossa Loja</a></li>
         </ul>
     </div>
     <div class="mmm-footer">
@@ -94,10 +90,8 @@
 <nav class="main-mnu">
     <ul class="main-mnu-list">
         <li><a href="index.html" data-title="Home"><span>Home</span></a></li>
-        <li><a href="typography.html" data-title="Typography"><span>Typography</span></a></li>
-        <li><a href="tabs-and-accordions.html" data-title="Tabs & Accordions"><span>Tabs & Accordions</span></a></li>
-        <li><a href="news.html" data-title="News"><span>News</span></a></li>
-        <li><a href="contact-us.html" data-title="Contact Us"><span>Contact Us</span></a></li>
+        <li><a href="#" data-title="Services"><span>Contato</span></a></li>
+        <li><a href="https://www.panitz.com.br/" data-title="Contact Us"><span>Nossa Loja</span></a></li>
     </ul>
 </nav><!-- End main menu -->
                 </div>
