alt menu hidrante

--- a/hidrantes.html
+++ b/hidrantes.html
@@ -91,12 +91,13 @@
                 </div>
                 <div class="col-auto header-fixed-col d-none d-lg-block col-static">
                     <!-- Begin main menu -->
-                <ul class="main-mnu-list">
-                    <li><a href="index.html" data-title="Home"><span>Home</span></a></li>
-                    <li><a href="#" data-title="Services"><span>Contato</span></a></li>
-                    <li><a href="https://www.panitz.com.br/" data-title="Contact Us"><span>Nossa Loja</span></a></li>
-                </ul>
-
+<nav class="main-mnu">
+    <ul class="main-mnu-list">
+        <li><a href="index.html" data-title="Home"><span>Home</span></a></li>
+        <li><a href="#" data-title="Services"><span>Contato</span></a></li>
+        <li><a href="https://www.panitz.com.br/" data-title="Contact Us"><span>Nossa Loja</span></a></li>
+    </ul>
+</nav><!-- End main menu -->
 </header><!-- End header -->
 			<div class="section">
 				<div class="container">
