--- a/extintores.html
+++ b/extintores.html
@@ -10,7 +10,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
         
-    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon"> 
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
+    
+     <!--BOTÃO DO WHATSAPP INICIO-->
+     <link rel=" " href="assets/img/whatsapp.svg" type="image/gif" sizes="16x16">
+     <link rel="stylesheet" href="assets/css/stylewpp.css">
+     <!--BOTÃO DO WHATSAPP FINAL-->
 
     <link rel="stylesheet" href="assets/css/libs.css">
 <link rel="stylesheet" href="assets/css/style.css">
@@ -27,6 +32,19 @@
 <body>
 
 	<main class="main">
+        <!--Botão do WhatsApp Inicio-->  
+        <div>
+            <a href="https://api.whatsapp.com/send?phone=555135953584&text=Ol%C3%A1%2C%20eu%20gostaria%20de%20..."
+            target="_blank" class="float">
+            <img src="assets/img/whatsapp.svg" alt="whatsapp" width="50">
+            </a>
+            <div id="caixaTexto">
+            Fale conosco via WhatsApp
+            </div>
+        </div>
+
+        <script src="assets/js/scriptwpp.js"></script>
+        <!--Botão do WhatsApp Final-->
 		
 		<div class="main-inner">
 
@@ -90,8 +108,8 @@
 <nav class="main-mnu">
     <ul class="main-mnu-list">
         <li><a href="index.html" data-title="Home"><span>Home</span></a></li>
-        <li><a href="#" data-title="Services"><span>Contato</span></a></li>
-        <li><a href="https://www.panitz.com.br/" data-title="Contact Us"><span>Nossa Loja</span></a></li>
+        <li><a href="#" data-title="Contato"><span>Contato</span></a></li>
+        <li><a href="https://www.panitz.com.br/" data-title="Nossa Loja"><span>Nossa Loja</span></a></li>
     </ul>
 </nav><!-- End main menu -->
                 </div>
@@ -100,16 +118,6 @@
                     <ul class="header-actions">
                         <!-- Begin header languarge -->
                         <li class="d-none d-lg-block">
-                            <div class="header-lang">
-                                <div class="header-lang-current"><i class="material-icons md-22">language</i></div>
-                                <ul class="header-lang-list">
-                                    <li class="active"><a href="#!" class="hover-link" data-lang="En" data-title="English"><span>English</span></a></li>
-                                    <li><a href="#!" class="hover-link" data-lang="Sp" data-title="Spanish"><span>Spanish</span></a></li>
-                                    <li><a href="#!" class="hover-link" data-lang="It" data-title="Italian"><span>Italian</span></a></li>
-                                    <li><a href="#!" class="hover-link" data-lang="Uk" data-title="Ukraine"><span>Ukraine</span></a></li>
-                                    <li><a href="#!" class="hover-link" data-lang="Ru" data-title="Russian"><span>Russian</span></a></li>
-                                </ul>
-                            </div>
                         </li><!-- End header languarge -->
                         <!-- Begin header navbar -->
                         <li class="d-block d-lg-none">
