--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
         
     <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon"> 
 
+    <!--BOTÃO DO WHATSAPP INICIO-->
     <link rel=" " href="assets/img/whatsapp.svg" type="image/gif" sizes="16x16">
-  <link rel="stylesheet" href="assets/css/stylewpp.css">
+     <link rel="stylesheet" href="assets/css/stylewpp.css">
+     <!--BOTÃO DO WHATSAPP FINAL-->
+
     <link rel="stylesheet" href="assets/css/libs.css">
 <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preload" href="assets/fonts/istok-web-v15-latin/istok-web-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
@@ -30,7 +33,7 @@
 <body>
 
 	<main class="main">
-        <!--Botão do WhatsApp-->  
+        <!--Botão do WhatsApp Inicio-->  
         <div>
             <a href="https://api.whatsapp.com/send?phone=555135953584&text=Ol%C3%A1%2C%20eu%20gostaria%20de%20..."
             target="_blank" class="float">
@@ -41,7 +44,8 @@
             </div>
         </div>
 
-        <script src="assets/js/scriptwpp.js"></script>      
+        <script src="assets/js/scriptwpp.js"></script>
+        <!--Botão do WhatsApp Final-->      
 		
 		<div class="main-inner">
 
@@ -98,8 +102,8 @@
 <nav class="main-mnu">
     <ul class="main-mnu-list">
         <li><a href="index.html" data-title="Home"><span>Home</span></a></li>
-        <li><a href="#" data-title="Services"><span>Contato</span></a></li>
-        <li><a href="https://www.panitz.com.br/" data-title="Contact Us"><span>Nossa Loja</span></a></li>
+        <li><a href="#" data-title="Contato"><span>Contato</span></a></li>
+        <li><a href="https://www.panitz.com.br/" data-title="Nossa Loja"><span>Nossa Loja</span></a></li>
     </ul>
 </nav><!-- End main menu -->
                 </div>
