alt botao contato

--- a/extintores.html
+++ b/extintores.html
@@ -196,7 +196,7 @@
                                 </div>
                                 <div class="wrap-btn intro-btns">
                                     <a href="https://api.whatsapp.com/send?phone=555135953584&text=Ol%C3%A1%2C%20eu%20gostaria%20de%20..." class="btn btn-with-icon btn-small ripple">
-                                        <span>Saiba Mais</span>
+                                        <span>Entre em Contato</span>
                                         <svg class="btn-icon-right" viewBox="0 0 13 9" width="13" height="9"><use xlink:href="assets/img/sprite.svg#arrow-right"></use></svg>
                                     </a>
                                     <a href="https://www.panitz.com.br/extintores" class="btn btn-with-icon btn-border btn-small ripple">
