--- a/extintores.html
+++ b/extintores.html
@@ -264,7 +264,7 @@
                         </div>
                         <div class="col-lg-4 col-md-6 col-12 item">
 							<!-- Begin icon item -->
-							<a href="single-services.html" class="iitem item-style">
+							<a href="hidrantes.html" class="iitem item-style">
 								<div class="iitem-icon">
 									<img src = "assets/img/registro.png" alt = "extintor" height="80px" width="80px"></img>
 								</div>
@@ -278,7 +278,7 @@
 						</div>
                         <div class="col-lg-4 col-md-6 col-12 item">
 							<!-- Begin icon item -->
-							<a href="single-services.html" class="iitem item-style">
+							<a href="#" class="iitem item-style">
 								<div class="iitem-icon">
 									<img src = "assets/img/treinamentos.png" alt = "extintor" height="70px" width="70px"></img>
 								</div>
@@ -292,7 +292,7 @@
 						</div>
                         <div class="col-lg-4 col-md-6 col-12 item">
 							<!-- Begin icon item -->
-							<a href="single-services.html" class="iitem item-style">
+							<a href="#" class="iitem item-style">
 								<div class="iitem-icon">
 									<img src = "assets/img/plano.png" alt = "extintor" height="70px" width="70px"></img>
 								</div>
