--- a/index.html
+++ b/index.html
@@ -67,10 +67,8 @@
     <div class="mmm-content">
         <ul class="mmm-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="typography.html">Typography</a></li>
-            <li><a href="tabs-and-accordions.html">Tabs & Accordions</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="https://www.panitz.com.br/">Nossa Loja</a></li>
         </ul>
     </div>
 </nav><!-- End mobile main menu -->
