--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 									<img src = "assets/img/treinamentos.png" alt = "extintor" height="70px" width="70px"></img>
 								</div>
 								<div class="iitem-icon-bg">
-									<i class="material-icons material-icons-outlined">phone_android</i>
+									<i class="material-icons material-icons-outlined"></i>
 								</div>
 								<h2 class="iitem-heading item-heading-large">Treinamentos de Prevenção e Combate a Incêndios</h2>
 								<div class="iitem-desc">Dispõe de todos os equipamentos necessários para o treinamento de cursos de Prevenção e Combate
@@ -264,7 +264,7 @@
 									<img src = "assets/img/lampada.png" alt = "extintor" height="70px" width="70px"></img>
 								</div>
 								<div class="iitem-icon-bg">
-									<i class="material-icons material-icons-outlined">tv</i>
+									<i class="material-icons material-icons-outlined"></i>
 								</div>
 								<h2 class="iitem-heading item-heading-large">Soluções em Luzes de Emergencia</h2>
 								<div class="iitem-desc">Possui uma abrangente variedade de luzes de emergência e sinalizadores, proporcionando maior segurança
